--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,5 @@
 .header{
-    background-image: url(/images/banner/banner2.png);
+    background-image: url(../images/banner/banner2.png);
     width: 1340px;
     height: 800px;
     margin-bottom: 100px;
